--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,6 @@ tqdm = "^4.55.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 yapf = "^0.30.0"
-jedi = "^0.18.0"
 ipython = "^7.19.0"
 pylint = "^2.6.0"
 pytest-mock = "^3.5.0"
@@ -36,6 +35,7 @@ flake8-isort = "^4.0.0"
 flake8-builtins = "^1.5.3"
 flake8-comprehensions = "^3.3.1"
 mypy = "^0.790"
+jedi = "<0.18"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
