--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ flake8-builtins = "^1.5.3"
 flake8-comprehensions = "^3.3.1"
 mypy = "^0.790"
 jedi = "<0.18"
+devtools = {extras = ["all"], version = "^0.6.1"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
