--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,12 @@ hiredis = "^1.1.0"
 PyJWT = "^2.0.0"
 scikit-learn = "^0.24.0"
 matplotlib = "^3.3.3"
-fastapi = {extras = ["all"], version = "^0.63.0"}
 typer = {extras = ["all"], version = "^0.3.2"}
-hydra-core = "^1.0.5"
 tabulate = "^0.8.7"
 tqdm = "^4.55.1"
+pydantic = {extras = ["email", "typing_extensions", "dotenv"], version = "^1.7.3"}
+sanic = "^20.12.1"
+Sanic-Cors = "^0.10.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
