--- a/mypy.ini
+++ b/mypy.ini
@@ -3,7 +3,7 @@ python_version = 3.9
 ignore_missing_imports = True
 plugins = pydantic.mypy
 warn_redundant_casts = True
-warn_unused_ignores = True
+warn_unused_ignores = False
 
 [pydantic-mypy]
 init_forbid_extra = True
