--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ jedi = "<0.18"
 devtools = {extras = ["pygments"], version = "^0.6.1"}
 flake8-quotes = "^3.2.0"
 black = "^20.8b1"
-autopep8 = "^1.5.4"
+autoflake = "^1.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
