--- a/.editorconfig
+++ b/.editorconfig
@@ -5,10 +5,8 @@ end_of_line = lf
 insert_final_newline = false
 trim_trailing_whitespace = true
 
-[{*.py, *.pyx, *.pxd}]
+[{*.py, *.pyx, *.pxd, *.json}]
 charset = utf-8
-indent_style = space
-indent_size = 2
 
 # 4 space indentation
 [*.py]
@@ -16,3 +14,9 @@ indent_style = space
 indent_size = 4
 tab_width = 4
 max_line_length = 120
+
+[*.json]
+indent_style = space
+indent_size = 2
+tab_width = 2
+max_line_length = 110
