--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ tqdm = "^4.55.1"
 pydantic = {extras = ["email", "typing_extensions", "dotenv"], version = "^1.7.3"}
 sanic = "^20.12.1"
 Sanic-Cors = "^0.10.0"
+orjson = "^3.5.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
