--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,17 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
-numpy = "^1.20.3"
-pandas = "^1.2.4"
+numpy = "1.21.0"
+pandas = "1.3.0"
 redis = "^3.5.3"
 hiredis = "^2.0.0"
 PyJWT = "^2.1.0"
-scikit-learn = "^0.24.2"
+scikit-learn = "0.24.2"
 pydantic = {extras = ["email", "typing_extensions", "dotenv"], version = "^1.8.2"}
-sanic = "^21.3.4"
+sanic = "^21.6.0"
 sanic-cors = "^1.0.0"
-orjson = "^3.5.2"
+orjson = "^3.5.4"
+devtools = {extras = ["pygments"], version = "^0.6.1"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -25,8 +26,7 @@ black = "^21.5b1"
 isort = "^5.8.0"
 flake8 = "^3.9.2"
 flake8-comprehensions = "^3.5.0"
-devtools = {extras = ["pygments"], version = "^0.6.1"}
-matplotlib = "^3.4.2"
+matplotlib = "3.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
