--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,6 @@ devtools = {extras = ["pygments"], version = "^0.6.1"}
 pytest = "^5.2"
 black = "^21.5b1"
 isort = "^5.8.0"
-flake8 = "^3.9.2"
-flake8-comprehensions = "^3.5.0"
 matplotlib = "3.4.2"
 
 [build-system]
@@ -55,9 +53,7 @@ line_length = 100
 [tool.pyright]
 include = ["hades"]
 extraPaths = ["hades"]
-exclude = [".venv", "**/__pycache__", "**/node_modules", "target"]
-#venvPath = ".venv"
-
+exclude = [".venv", "**/__pycache__"]
 reportTypeshedErrors = false
 reportUnboundVariable = "none"
 reportMissingImports = true
@@ -66,7 +62,6 @@ reportGeneralTypeIssues = "none"
 reportOptionalSubscript = false
 reportOptionalIterable = false
 reportOptionalOperand = false
-
 executionEnvironments = [
-  { root = "./", extraPaths = ["hades"], exclude = [".venv", "**/__pycache__", "**/node_modules", "target"] }
+  { root = "./", extraPaths = ["hades"], exclude = [".venv", "**/__pycache__"] }
 ]
